--- a/tp/css/styles.css
+++ b/tp/css/styles.css
@@ -1,8 +1,10 @@
+@import 'styles-globaux.css';
+
 h1{ color: red; text-decoration : underline }
 p { color: green; }
 #idP1 { color: blue; }
-header { background-color: lightgrey ; }
-footer {  background-color: black ; color : white ; }
 #idSection1 { font-style : italic ; }
+ol li { text-decoration : underline; }
+ul li { font-style : italic ; }
 
 .enEvidence { text-decoration: underline; }
