--- a/tp/css/styles-globaux.css
+++ b/tp/css/styles-globaux.css
@@ -1,3 +1,3 @@
-
+@import 'font/allura-webfont.css';
 header { background-color: lightgrey ; }
 footer {  background-color: black ; color : white ; }
