--- a/tp/css/styles2.css
+++ b/tp/css/styles2.css
@@ -6,6 +6,11 @@ label { width:8em; display: inline-block; }
 */
 .enEvidence { font-weight: bold; }
 
+.withAlluraFont{
+	font-family : alluraregular, Arial ;
+	font-size : 2em;
+}
+
 option[selected] { color : red; }
 
 caption { text-decoration : underline; font-weight : bold; }
