contact avec ou sans bootstrap

--- a/tp/css/styles2.css
+++ b/tp/css/styles2.css
@@ -1,7 +1,7 @@
 @import 'styles-globaux.css';
 
 body { background-color : lightgrey; }
-
+/* utile dans version sans bootstrap-css */
 label { width:8em; display: inline-block; } 
 
 .enEvidence { font-weight: bold; }
@@ -15,7 +15,11 @@ option[selected] { color : red; }
 
 caption { text-decoration : underline; font-weight : bold; }
 
-.auCentre { text-align: center ; }
+.auCentre { text-align: center ; 
+            font-weight : bold; 
+			color: red!important; }
+
+
 .assezLarge { width : 80% }
 
 .cadre{ border-color : black;
